@@ -1,6 +1,8 @@
 v0.4 -- ...
 
+	* Add ECP mode (write_data).
 	* Add EPP mode.
+	* Cleanup in parport_ip32_compat_write_data().
 
 v0.3 -- Fri, 11 Nov 2005 20:14:05 +0100
 
